--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# ignore Private file
+Private
+
+# ignore c files
+*.d
+*.o
+*.hex
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
