continuing to clean up and fix code errors
Notes: added PI setup information
Makefile: changed to use full sprintf library and compile all modules
main.*: fixes and code cleanup
lcd.h: fixes
serial.*: added interrupt code
motor.c: added motor control library

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,16 @@ Orangutan/twimaster
 # ignore Private file
 Private
 
+# ignore emacs files
+*~
+\#*\#
+.\#*.c
+
 # ignore c files
 *.d
 *.o
+
+# ignore avr files
 *.hex
 
 # Byte-compiled / optimized / DLL files
